--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: abc-deployment
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: abc
-  replicas: 1 # tells deployment to run x pods matching the template
+  replicas: 1
   template:
     metadata:
       labels:
