--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM mcr.microsoft.com/java/jre-headless:11-zulu-ubuntu
 
-COPY testApp-1.0-SNAPSHOT-jar-with-dependencies.jar /opt/api-server.jar
+COPY serverApp-1.0-SNAPSHOT-jar-with-dependencies.jar /opt/api-server.jar
 
 EXPOSE 8088
 
