--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: abc-deployment
+  name: myImage-deployment
 spec:
   selector:
     matchLabels:
-      app: abc
+      app: myImage
   replicas: 5
   template:
     metadata:
       labels:
-        app: abc
+        app: myImage
     spec:
       containers:
-        - name: abc
-          image: abc:latest
+        - name: myImage
+          image: myImage:latest
           imagePullPolicy: Never
           ports:
             - name: http
