--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myImage-deployment
+  name: myimage-deployment
 spec:
   selector:
     matchLabels:
-      app: myImage
+      app: myimage
   replicas: 5
   template:
     metadata:
       labels:
-        app: myImage
+        app: myimage
     spec:
       containers:
-        - name: myImage
-          image: myImage:latest
+        - name: myimage
+          image: myimage:latest
           imagePullPolicy: Never
           ports:
             - name: http
